laborations/lab1/testsuite/good/void_expr_as_stmt.cc
/* void expression as statement */

void foo() {
  printInt(1);
}

int main() {
  foo();
  return 0 ;

}
