laborations/lab1/testsuite/bad/bad051.cc
void foo(const const int x) {

}
